<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shopEditProfileFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#dcedc8"
    android:padding="30dp">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingPrefix">


            <ImageButton
                android:id="@+id/shop_image_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@drawable/mainbuttontext"
                android:contentDescription="Imagen del usuario"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:layout_marginStart="15dp"
                android:layout_above="@+id/shop_name_edit_profile"
                android:layout_toEndOf="@+id/shop_image" />


            <ImageView
                android:id="@+id/shop_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:tint="#22000000"
                app:srcCompat="@android:drawable/ic_menu_report_image"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />


            <EditText
                android:id="@+id/shop_name_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shop_image"
                android:ems="10"
                fontPath="fonts/Raleway-Light.ttf"
                android:textColor="#757575"
                android:layout_marginTop="20dp"
                android:textSize="30sp"/>


            <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/linearLayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/shop_name_edit_profile"
                android:layout_centerVertical="true"
                android:gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mailProfileIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:tint="#757575"
                    app:srcCompat="@drawable/mail_icon" />

                <EditText
                    android:id="@+id/shop_email_edit_profile"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:textColor="#757575" />

            </LinearLayout>


            <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/linearLayout_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout_email"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:tint="#757575"
                    app:srcCompat="@drawable/ic_location" />

                <EditText
                    android:id="@+id/shop_address_edit_profile"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:textColor="#757575" />


            </LinearLayout>





            <Button
                android:id="@+id/saveEditProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonregisterloginshape"
                android:textColor="@drawable/mainbuttontext"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/linearLayout_location"
                android:text="Guardar" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>