...
        <item
            android:id="@+id/give_points_fragment"
            android:icon="@mipmap/ic_fiber_smart_record_black_24dp"
            android:orderInCategory="10"
            android:title="@string/give_points" />
        <item
            android:id="@+id/shop_view_fragment"
            android:icon="@mipmap/ic_store_black_24dp"
            android:orderInCategory="11"
            android:title="@string/shop" />
        <item
            android:id="@+id/list_events_shop_fragment"
            android:icon="@mipmap/ic_view_list_black_24dp"
...
        <item
            android:id="@+id/about_us_fragment"
            android:icon="@mipmap/ic_info_black_24dp"
            android:orderInCategory="103"
            android:title="@string/about_us" />
        <item
            android:id="@+id/log_out"
            android:icon="@mipmap/ic_power_settings_new_black_24dp"
            android:orderInCategory="104"
            android:title="@string/log_out" />
    </group>
</menu>
